--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@web3forms/react": "^1.1.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "gsap": "^3.13.0",
