--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-pdf": "^10.2.0",
     "react-tooltip": "^5.30.0",
     "react-useanimations": "^2.10.0",
