--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "#*" : ["src/*"]
+      "#*": ["src/*"],
+      "#components": ["src/components"],
+      "#constants": ["src/constants"],
+      "#store": ["src/store"],
+      "#hoc": ["src/hoc"],
+      "#windows": ["src/windows"]
     }
   },
   "include": ["src"]
